# CppBoilerplate

./: CMakeLists.txt  README.md  main.cpp
src/: test.cpp
test/: unitTestTest.cpp
